# little-kernel

./: .gitignore  Cargo.toml  Documentation.md  Makefile  desktop-lite-debian.sh
.cargo/: config.toml  linker.ld
.devcontainer/: Dockerfile  devcontainer.json
src/: address.rs  allocator.rs  application.ld  boot.rs  boot.s  io.rs  kernel.rs  main.rs  panic.rs
