[package]
name = "little-kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
good_memory_allocator = "0.1.7"

[lib]
name="littlekernel"
path="src/kernel.rs"
crate-type=["staticlib"]


[build]
target="armv7a-none-eabihf"
target-dir = "build"
